@@ -5,6 +5,8 @@ v0.8.0
         * replaced Entry with HTNodeI everywhere; dropped Entry     * SLOC 1414
         * added profileHAMT, dropped Table.indices                  * SLOC 1463
         * calculated BytesKey.Hashcode() directly                   * SLOC 1450
+        * Table.MaxSlots(), Table.MaxDepth() functions              * SLOC 1453
+        * root.insertLeaf(), Table.insertLeaf() optimized           * SLOC 1441
 v0.7.0
     2014-05-06
         * replace *Entry with NodeI in other tables
